--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,3 +1,7 @@
+*{
+  font-size: 16px;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
@@ -6,11 +10,13 @@ body {
 .card {
   width: 400px;
   background: #fff;
+  border:  5px solid white;
   margin: 16px auto;
 }
 
 .title {
   background: #e3f4ff;
+
 }
 
 .content {
@@ -19,9 +25,16 @@ body {
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  margin-top: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin:auto;
+  box-sizing: border-box;
+  height: 50px;
+  width: 150px;
 }
